@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.episteme</groupId>
         <artifactId>episteme-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0-beta1</version>
     </parent>
 
     <artifactId>episteme-native</artifactId>
@@ -226,9 +226,46 @@
                                 <arg>-Xpkginfo:always</arg>
                             </compilerArgs>
                             <excludes>
+                                <exclude>**/cuda/*.java</exclude>
                                 <exclude>**/cuda/**/*.java</exclude>
                                 <exclude>**/*CUDA*.java</exclude>
                             </excludes>
+                            <testExcludes>
+                                <testExclude>**/*CUDA*Test.java</testExclude>
+                            </testExcludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>no-cuda-arm</id>
+            <activation>
+                <os>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <release>25</release>
+                            <compilerArgs>
+                                <arg>--enable-preview</arg>
+                                <arg>--add-modules</arg>
+                                <arg>jdk.incubator.vector</arg>
+                                <arg>-Xpkginfo:always</arg>
+                            </compilerArgs>
+                            <excludes>
+                                <exclude>**/cuda/*.java</exclude>
+                                <exclude>**/cuda/**/*.java</exclude>
+                                <exclude>**/*CUDA*.java</exclude>
+                            </excludes>
+                            <testExcludes>
+                                <testExclude>**/*CUDA*Test.java</testExclude>
+                            </testExcludes>
                         </configuration>
                     </plugin>
                 </plugins>
